# scrooge

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  schema.sql  startup.sql
.github/workflows/: ci.yml
src/scrooge/: __init__.py  __main__.py  ingest.py  metrics.py  retention.py  server.py
tests/: test_ingest.py  test_retention.py  test_server.py
tests/integration/: _daffy.py  conftest.py  test_archival_irods.py  test_edge_cases.py  test_interop.py  test_performance.py  test_rest_endpoint.py  test_smoke.py
